force-app/main/default/objects/AmazonS3__c/AmazonS3__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AmazonS3</label>
</CustomObject>