force-app/main/default/objects/AmazonS3__c/fields/AmazonS3_Host__c.field-meta.xml
<CustomField>
    <fullName>AmazonS3_Host__c</fullName>
    <label>AmazonS3_Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>