force-app/main/default/objects/AmazonS3__c/fields/Bucket_Region__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Region__c</fullName>
    <label>Bucket Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>