force-app/main/default/objects/AmazonS3__c/fields/Identity_Pool_Id__c.field-meta.xml
<CustomField>
    <fullName>Identity_Pool_Id__c</fullName>
    <label>Identity Pool Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>